updates to comments

--- a/sparkify_EDA.ipynb
+++ b/sparkify_EDA.ipynb
@@ -3361,28 +3361,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 400
+          "height": 365
         },
-        "outputId": "41e2666a-3416-4862-fdee-1d2d61e16771"
+        "outputId": "19cbb745-9469-4f7f-80f9-157bf0cd03bf"
       },
       "source": [
         "# look at distribution of 'NextSong'\n",
         "df2 = users_churn_page_pd[users_churn_page_pd['page'] == 'NextSong']\n",
         "sns.set(font_scale=1)\n",
         "bins = np.arange(df2.count_page.min(), df2.count_page.max(), 100)\n",
-        "g = sns.FacetGrid(df2, col=\"page\", hue=\"churn\", col_wrap = 1, size=5)\n",
+        "g = sns.FacetGrid(df2, col=\"page\", hue=\"churn\", col_wrap = 1, height=5)\n",
         "g = (g.map(plt.hist, \"count_page\", bins = bins).add_legend());"
       ],
-      "execution_count": 92,
+      "execution_count": 97,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/seaborn/axisgrid.py:243: UserWarning: The `size` parameter has been renamed to `height`; please update your code.\n",
-            "  warnings.warn(msg, UserWarning)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -3543,19 +3535,6 @@
       "source": [
         "I will use data exploration performed here to perform feature extraction for modeling."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sXReuyDZLiom",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
